--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="card">
-    <img class="NFTpic" src="images/image-equilibrium.jpg" alt="NFT picture">
+    <img class="NFTpic" src="image-equilibrium.jpg" alt="NFT picture">
     <h3>Equilibrium #3429</h3>
 
     <p class="para">
@@ -28,17 +28,17 @@
     <table >
       <tr>
         <td class="coin">
-          <img src="images/icon-ethereum.svg" alt="ETH coin symbol"> 0.041 ETH
+          <img src="icon-ethereum.svg" alt="ETH coin symbol"> 0.041 ETH
         </td>
         <td class="time">
-        <img src="images/icon-clock.svg" alt="clock icon">3 days left
+        <img src="icon-clock.svg" alt="clock icon">3 days left
       </td>
 
     </tr>
 
     </table>
     <hr>
-    <p class="creator"><img class="jules" src="images/image-avatar.png"><span>Creation of </span>Jules Wyvern</p>
+    <p class="creator"><img class="jules" src="image-avatar.png"><span>Creation of </span>Jules Wyvern</p>
   </div>
 
 
